<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="proxied_apps_summary">Set proxy for selected apps, requires NAT mode under Android 4.x</string>
    <string name="about">www.dbsr.cf</string>
    <string name="about_title">DBSR %s</string>
    <string name="acl_file">ACL File URL</string>
    <string name="aclupdate">ACL Update</string>
    <string name="aclupdate_downloading">Updating ACL file...</string>
    <string name="aclupdate_failed">Failed to update ACL file!</string>
    <string name="aclupdate_successfully">Successfully updated ACL file.</string>
    <string name="aclupdate_summary">Update Your ACL file</string>
    <string name="aclupdate_url_notset">"Sorry, an ACL file URL has to be set before you can update it. Please click on 'Customize ACL File' in 'Route Setting' and try again."</string>
    <string name="action_apply_all">Apply Settings to All Profiles</string>
    <string name="action_export">Export to Clipboard</string>
    <string name="action_export_err">Failed to export profiles!</string>
    <string name="action_export_msg">Successfully exported profiles.</string>
    <string name="action_full_test">Full latency test</string>
    <string name="action_import">Import from Clipboard</string>
    <string name="action_import_err">Failed to import profiles!</string>
    <string name="action_import_msg">Successfully imported profiles.</string>
    <string name="action_sort">Auto sort by latency</string>
    <string name="add_profile">Add Profile</string>
    <string name="add_profile_dialog">Add this SSR profile?</string>
    <string name="add_profile_methods_manual_settings">Manual Settings</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
    <string name="add_profile_methods_ssr_sub">Add/Update SSR Subscription</string>
    <string name="add_profile_nfc_hint">"Keep both devices' screen on. On the other device, click on the 'share' button. Place both devices' backs against each other.
You may also scan a nfc tag."</string>
    <string name="add_profile_nfc_hint_title">Use Android Beam (NFC) to add a profile</string>
    <string name="add_profile_scanner_permission_required">Camera permission is required for scanning QR code.</string>
    <string name="app_name">DBSR</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_connect_summary">Enable ShadowsocksR on startup</string>
    <string name="auto_set_gfwlist">CHN Route</string>
    <string name="auto_set_gfwlist_summary">Bypass all sites located in China</string>
    <string name="bypass_apps">Bypass Mode</string>
    <string name="bypass_apps_summary">Enable this option to bypass selected apps</string>
    <string name="china_dns">China DNS</string>
    <string name="china_dns_summary">The DNS server you want to use to resolve normal domain,e.g. 223.5.5.5:53</string>
    <string name="close">Close</string>
    <string name="connect">Connect</string>
    <string name="connection_test_available">Success: %dms latency</string>
    <string name="connection_test_error">Fail to detect internet connection: %s</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_pending">Check Connectivity</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="copy_url">Copy URL</string>
    <string name="dns">DNS</string>
    <string name="dns_proxy">DNS Proxy</string>
    <string name="dns_proxy_summary">Redirect DNS queries to remote</string>
    <string name="dns_summary">The DNS server you want to use to resolve special domain,e.g. 8.8.8.8:53</string>
    <string name="dr">Duplicate Removal Add</string>
    <string name="enc_method">Encrypt Method</string>
    <string name="feature_cat">Feature Settings</string>
    <string name="flush_dnscache">Flush DNS cache</string>
    <string name="flush_dnscache_no_root">Flush DNS cache cannot proceed without ROOT permission</string>
    <string name="flush_dnscache_summary">Only useful in NAT mode</string>
    <string name="flushing">Flushing</string>
    <string name="forward_success">ShadowsocksR started.</string>
    <string name="frontproxy_addr">Address</string>
    <string name="frontproxy_enable">Enable</string>
    <string name="frontproxy_password">Password</string>
    <string name="frontproxy_port">Port</string>
    <string name="frontproxy_set">FrontProxy</string>
    <string name="frontproxy_type">Type</string>
    <string name="frontproxy_username">Username</string>
    <string name="gotcha">Gotcha!</string>
    <string name="group_name">Group Name</string>
    <string name="http_proxy">HTTP Proxy</string>
    <string name="http_proxy_summary">Local HTTP Proxy</string>
    <string name="ignore_battery_optimization">Request ignore battery optimizations</string>
    <string name="ignore_battery_optimization_summary">Click to request trigger Ignore the battery optimization, to avoid background hiccups caused by hibernation when off screen, will increase the battery consumption, may not be triggered properly on some devices.</string>
    <string name="initializing">Initializing…</string>
    <string name="invalid_server">Invalid server name</string>
    <string name="ipv6">IPv6 Route</string>
    <string name="ipv6_summary">Redirect IPv6 traffic to remote</string>
    <string name="loading">Loading…</string>
    <string name="method_unsafe">WARNING: The current encryption method is unsafe</string>
    <string name="misc_cat">Misc</string>
    <string name="nat">NAT mode (deprecated)</string>
    <string name="nat_deprecated">WARNING: NAT mode has been deprecated since Android 5.0</string>
    <string name="nat_no_root">NAT mode requires ROOT permission</string>
    <string name="nat_summary">Use NAT mode instead of VPN mode. Requires ROOT permission.</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs Param</string>
    <string name="obfs_param_summary">Obfs param you put in your server</string>
    <string name="obfs_summary">Obfs you selected in your server</string>
    <string name="on">On</string>
    <string name="onetime_auth">One-time Authentication</string>
    <string name="onetime_auth_summary">Enable one-time authentication</string>
    <string name="ping">Ping</string>
    <string name="port">Local Port</string>
    <string name="port_summary">%d (port number of the local server)</string>
    <string name="profile">Profile</string>
    <string name="profile_default">Use the current profile</string>
    <string name="profile_manager_dialog">Profiles</string>
    <string name="profile_manager_dialog_content">"• Tap to select a profile;
• Swipe left/right or press left to remove;
• Long press to reorder profiles."</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_summary">Switch to another profile or add new profiles</string>
    <string name="profiles">Profiles</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol Param</string>
    <string name="protocol_param_summary">Protocol param you input in your server</string>
    <string name="protocol_summary">Protocol you set in your server</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="proxy">Server</string>
    <string name="proxy_cat">Server Settings</string>
    <string name="proxy_click">Click on the group name to view its URL</string>
    <string name="proxy_empty">"'Proxy' and 'Password' should not be empty"</string>
    <string name="quick_switch">Switch</string>
    <string name="quick_toggle">Toggle</string>
    <string name="reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
    <string name="received">Received:</string>
    <string name="recovering">Resetting…</string>
    <string name="recovery">Reset</string>
    <string name="recovery_summary">Reset all the background services</string>
    <string name="remote_port">Remote Port</string>
    <string name="remote_port_summary">%d (port number of the remote server)</string>
    <string name="remove_profile">Remove this profile %s?</string>
    <string name="route_list">Route</string>
    <string name="scan_qrcode_direct_download_text">Install Manually</string>
    <string name="sitekey">Password</string>
    <string name="tcp_fastopen_summary">Toggling requires ROOT permission</string>
    <string name="udp_dns">UDP Forwarding</string>
    <string name="udp_dns_summary">Forward UDP packets to remote</string>
    <string name="sitekey_summary">Password of the remote server</string>
</resources>