<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/frontproxy_enable" />
    <Switch android:id="@id/sw_frontproxy_enable" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/frontproxy_type" />
    <Spinner android:entries="@array/frontproxy_type_entry" android:id="@id/sp_frontproxy_type" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/frontproxy_addr" />
    <EditText android:id="@id/et_frontproxy_addr" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/frontproxy_port" />
    <EditText android:id="@id/et_frontproxy_port" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/frontproxy_username" />
    <EditText android:id="@id/et_frontproxy_username" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/frontproxy_password" />
    <EditText android:id="@id/et_frontproxy_password" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>